# LinkedIN_Agentic_AI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Product.md  README.md  pyproject.toml
.claude/skills/: team-builder.md
agents/: agent_coder.py  agent_designer.py  agent_marketer.py  agent_pm.py  agent_researcher.py  common.py  orchestrator_template.py  scenario_search_quality.py  seed_agents.json
backend/: __init__.py  alembic.ini  mcp_server.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_publisher_entity.py  0003_review_entity.py  0004_github_layer.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  agents.py  demo.py  github.py  orchestrator.py  publishers.py  teams.py  threads.py
backend/app/services/: demo_events.py  demo_runner.py  github.py  groq_planner.py  invoke.py  observability.py  orchestrator_parser.py  outreach.py  scoring.py  semantic.py
backend/app/services/workers/: __init__.py  coder.py  designer.py  marketer.py  researcher.py
cli/: README.md  __init__.py  __main__.py  app.py  binder.py  client.py  config.py  errors.py  formatter.py  help_catalog.py  spec_loader.py  sse.py
cli/tests/: conftest.py  test_app_smoke.py  test_binder.py  test_e2e.py  test_help_catalog.py  test_spec_loader.py
docs/: EVAL_PHASE1.md  PRD.md  PRD_CLI.md  TEST_CASE.md  TEST_CASE_CLI.md  TSD.md  TSD_CLI.md  openapi.json  plan.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/demo/: page.tsx  useTypingText.ts
frontend/app/directory/: page.tsx
frontend/app/teams/: page.tsx
frontend/components/: OrchestratorUpload.tsx
frontend/lib/: api.ts
plans/: final_plan.md  plan_A.md  plan_B.md
tests/: conftest.py  test_api.py  test_services.py
